tests/errors/init_state/move_and_drop/call_target_of_uninit.sim

        fn f() {
          g: fn(i64);
          entry:
            call copy g(1);
            return
        }
        